--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,47 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/spacing_large">
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:padding="@dimen/spacing_medium">
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_username"
-        style="@style/myTextInputLayout">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/edit_text_username"
-            style="@style/myEditText"
-            android:hint="Username"
-            android:imeOptions="actionNext"
-            android:inputType="text"
-            android:maxLength="25" />
-    </android.support.design.widget.TextInputLayout>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="@dimen/spacing_medium">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_username"
+                    style="@style/myTextInputLayout">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_text_username"
+                        style="@style/myEditText"
+                        android:drawableLeft="@drawable/ic_user_name"
+                        android:drawablePadding="@dimen/spacing_small"
+                        android:drawableTint="@color/colorPrimaryDark"
+                        android:hint="Username"
+                        android:imeOptions="actionNext"
+                        android:inputType="text"
+                        android:maxLength="25" />
+                </android.support.design.widget.TextInputLayout>
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_password"
-        style="@style/myTextInputLayout">
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_password"
+                    style="@style/myTextInputLayout">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/edit_text_password"
-            style="@style/myEditText"
-            android:hint="Password"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword" />
-    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_text_password"
+                        style="@style/myEditText"
+                        android:drawableLeft="@drawable/ic_password"
+                        android:drawablePadding="@dimen/spacing_small"
+                        android:drawableTint="@color/colorPrimaryDark"
+                        android:hint="Password"
+                        android:imeOptions="actionDone"
+                        android:inputType="textPassword" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
-    <Button
-        android:id="@+id/button_login"
-        style="@style/simpleButton"
-        android:layout_marginTop="@dimen/spacing_large"
-        android:text="Login" />
-    <Button
-        android:id="@+id/button_signup"
-        style="@style/simpleButton"
-        android:layout_marginTop="@dimen/spacing_large"
-        android:text="Sign up" />
+        <Button
+            android:id="@+id/button_login"
+            style="@style/simpleButton"
+            android:layout_marginTop="@dimen/spacing_large"
+            android:text="Login" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/button_signup"
+            style="@style/simpleButton"
+            android:layout_marginTop="@dimen/spacing_large"
+            android:text="Sign up" />
+
+        <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:id="@+id/input_layout_username"-->
+        <!--style="@style/myTextInputLayout">-->
+
+        <!--<android.support.design.widget.TextInputEditText-->
+        <!--android:id="@+id/edit_text_username"-->
+        <!--style="@style/myEditText"-->
+        <!--android:hint="Username"-->
+        <!--android:imeOptions="actionNext"-->
+        <!--android:inputType="text"-->
+        <!--android:maxLength="25" />-->
+        <!--</android.support.design.widget.TextInputLayout>-->
+
+
+        <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:id="@+id/input_layout_password"-->
+        <!--style="@style/myTextInputLayout">-->
+
+        <!--<android.support.design.widget.TextInputEditText-->
+        <!--android:id="@+id/edit_text_password"-->
+        <!--style="@style/myEditText"-->
+        <!--android:hint="Password"-->
+        <!--android:imeOptions="actionDone"-->
+        <!--android:inputType="textPassword" />-->
+        <!--</android.support.design.widget.TextInputLayout>-->
+
+        <!--<Button-->
+        <!--android:id="@+id/button_login"-->
+        <!--style="@style/simpleButton"-->
+        <!--android:layout_marginTop="@dimen/spacing_large"-->
+        <!--android:text="Login" />-->
+
+        <!--<Button-->
+        <!--android:id="@+id/button_signup"-->
+        <!--style="@style/simpleButton"-->
+        <!--android:layout_marginTop="@dimen/spacing_large"-->
+        <!--android:text="Sign up" />-->
+
+    </LinearLayout>
+
+
+</android.support.constraint.ConstraintLayout>
 
