--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <ScrollView
@@ -21,49 +22,69 @@
                 android:layout_marginTop="@dimen/spacing_medium"
                 android:contentDescription=""
                 android:scaleType="centerCrop"
-                android:src="@drawable/user"
+                android:src="@mipmap/user"
                 android:tint="@color/colorUserPlaceholderIcon"
                 app:riv_border_color="@color/colorUserBorder"
                 app:riv_border_width="3dp"
                 app:riv_corner_radius="100dp"
                 app:riv_mutate_background="true"
                 app:riv_oval="true" />
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_emp_code"
-                style="@style/myTextInputLayout">
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                app:cardCornerRadius="@dimen/spacing_medium"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content">
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/input_layout_emp_code"
+                        style="@style/myTextInputLayout">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/edit_text_emp_code"
-                    style="@style/myEditText"
-                    android:hint="Employee Code"
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:maxLength="25" />
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_username"
-                style="@style/myTextInputLayout">
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edit_text_emp_code"
+                            style="@style/myEditText"
+                            android:hint="Employee Code"
+                            android:drawableLeft="@drawable/ic_employee_code"
+                            android:drawablePadding="@dimen/spacing_small"
+                            android:drawableTint="@color/colorPrimaryDark"
+                            android:imeOptions="actionNext"
+                            android:inputType="text"
+                            android:maxLength="25" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/input_layout_username"
+                        style="@style/myTextInputLayout">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/edit_text_username"
-                    style="@style/myEditText"
-                    android:hint="Username"
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:maxLength="25" />
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_password"
-                style="@style/myTextInputLayout">
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edit_text_username"
+                            style="@style/myEditText"
+                            android:hint="Username"
+                            android:drawableLeft="@drawable/ic_user_name"
+                            android:drawablePadding="@dimen/spacing_small"
+                            android:drawableTint="@color/colorPrimaryDark"
+                            android:imeOptions="actionNext"
+                            android:inputType="text"
+                            android:maxLength="25" />
+                    </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/input_layout_password"
+                        style="@style/myTextInputLayout">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/edit_text_password"
-                    style="@style/myEditText"
-                    android:hint="Password"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPassword"
-                    android:maxLength="25" />
-            </android.support.design.widget.TextInputLayout>
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edit_text_password"
+                            style="@style/myEditText"
+                            android:drawableLeft="@drawable/ic_password"
+                            android:drawablePadding="@dimen/spacing_small"
+                            android:drawableTint="@color/colorPrimaryDark"
+                            android:hint="Password"
+                            android:imeOptions="actionDone"
+                            android:inputType="textPassword"
+                            android:maxLength="25" />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
             <Button
                 android:id="@+id/button_signup"
                 style="@style/simpleButton"
