--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--Basic-->
-    <color name="colorPrimary">#5cc5f4</color><!-- ok Only used in styles.xml -->
-    <color name="colorPrimaryDark">#0AA8EF</color> <!-- Toolbar Color -->
-    <color name="colorAccent">#93d4f1</color> <!-- ok Only used in styles.xml -->
+    <color name="colorPrimary">#546e7a</color><!-- ok Only used in styles.xml -->
+    <color name="colorPrimaryDark">#29434e</color> <!-- Toolbar Color -->
+    <color name="colorAccent">#819ca9</color> <!-- ok Only used in styles.xml -->
     <color name="colorMain">#c82209</color>
     <!--App Background-->
     <color name="colorAppBG">#e6e6e6</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorWhitetransparent">#00546e7a</color>
     <color name="colorDividerLine">@color/colorMain</color>
     <!--Tabs-->
     <color name="colorTabs">#bababa</color>
