--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,6 +25,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_small"
+            android:layout_marginEnd="@dimen/spacing_small"
             app:cardCornerRadius="@dimen/spacing_medium">
 
             <LinearLayout
@@ -68,7 +70,7 @@
 
         <Button
             android:id="@+id/button_login"
-            style="@style/simpleButton"
+            style="@style/simpleButton_orange"
             android:layout_marginTop="@dimen/spacing_large"
             android:text="Login" />
 
