--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -32,6 +32,8 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 app:cardCornerRadius="@dimen/spacing_medium"
+                android:layout_marginStart="@dimen/spacing_small"
+                android:layout_marginEnd="@dimen/spacing_small"
                 android:layout_height="wrap_content">
                 <LinearLayout
                     android:layout_width="match_parent"
