--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -164,7 +164,7 @@
     <color name="card_logout_color">#FF8A65</color>
     <color name="card_logout_color_pressed">#c75b39</color>
     <color name="bright_overlay">#21ffffff</color>
-    <color name="card_expense_color">#EF5350</color>
+    <color name="card_expense_color">#ff7043</color>
     <color name="card_expense_color_pressed">#b61827</color>
     <color name="card_income_color">@color/colorPrimary</color>
     <color name="card_income_color_pressed">@color/colorPrimaryDark</color>
