--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,17 @@
         <item name="android:textColor">@color/colorSimpleDialogTitleText</item>
         <item name="android:background">@drawable/border_white</item>
     </style>
+    <style name="simpleButton_orange" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:textSize">@dimen/app_button</item>
+        <item name="android:paddingBottom">0dp</item>
+        <item name="android:textColor">@color/colorSimpleDialogTitleText</item>
+        <item name="android:background">@drawable/border_orange</item>
+    </style>
     <style name="simpleButton_wrap" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">40dp</item>
