--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -172,8 +172,8 @@
     <color name="card_saving_color_pressed">#ba6b6c</color>
     <color name="card_alarm_color">#EF5350</color>
     <color name="card_alarm_color_pressed">#b61827</color>
-    <color name="card_checkin_color">@color/colorPrimary</color>
-    <color name="card_checkin_color_pressed">@color/colorPrimaryDark</color>
+    <color name="card_checkin_color">#90caf9</color>
+    <color name="card_checkin_color_pressed">#5d99c6</color>
     <color name="card_checkout_color">#009688</color>
     <color name="card_checkout_color_pressed">#00675b</color>
     <color name="card_purchase_color">#CE93D8</color>
