--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -33,6 +33,7 @@
                 android:layout_width="match_parent"
                 app:cardCornerRadius="@dimen/spacing_medium"
                 android:layout_marginStart="@dimen/spacing_small"
+                app:cardBackgroundColor="@color/colorprimaryTransparent"
                 android:layout_marginEnd="@dimen/spacing_small"
                 android:layout_height="wrap_content">
                 <LinearLayout
@@ -49,7 +50,6 @@
                             android:hint="Employee Code"
                             android:drawableLeft="@drawable/ic_employee_code"
                             android:drawablePadding="@dimen/spacing_small"
-                            android:drawableTint="@color/colorPrimaryDark"
                             android:imeOptions="actionNext"
                             android:inputType="text"
                             android:maxLength="25" />
@@ -64,7 +64,6 @@
                             android:hint="Username"
                             android:drawableLeft="@drawable/ic_user_name"
                             android:drawablePadding="@dimen/spacing_small"
-                            android:drawableTint="@color/colorPrimaryDark"
                             android:imeOptions="actionNext"
                             android:inputType="text"
                             android:maxLength="25" />
@@ -78,7 +77,6 @@
                             style="@style/myEditText"
                             android:drawableLeft="@drawable/ic_password"
                             android:drawablePadding="@dimen/spacing_small"
-                            android:drawableTint="@color/colorPrimaryDark"
                             android:hint="Password"
                             android:imeOptions="actionDone"
                             android:inputType="textPassword"
