--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorWhite">#ffffff</color>
     <color name="colorWhitetransparent">#00546e7a</color>
     <color name="colorDividerLine">@color/colorMain</color>
+    <color name="colorprimaryTransparent">#9d29434e</color>
     <!--Tabs-->
     <color name="colorTabs">#bababa</color>
     <color name="colorTabsText">#000000</color>
