--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,7 +75,7 @@
         <item name="android:textColorHint">@color/colorPrimaryDark</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">@dimen/app_body_1</item>
-        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textColor">@color/colorWhite</item>
     </style>
 
 </resources>
