driver menu added and color changes

--- a/app/src/main/res/layout/item_packets.xml
+++ b/app/src/main/res/layout/item_packets.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/spacing_medium"
     android:layout_marginStart="@dimen/spacing_medium"
+    app:cardBackgroundColor="@color/colorWhitetransparent"
     android:layout_marginEnd="@dimen/spacing_medium"
     app:cardCornerRadius="@dimen/spacing_medium">
 
