--- a/app/src/main/res/menu/admin_menu.xml
+++ b/app/src/main/res/menu/admin_menu.xml
@@ -6,7 +6,7 @@
         android:name="Sync"
         android:enabled="true"
         android:title="Sync"
-        android:visible="true"
+        android:visible="false"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_logout"
